[package]
name = "babyshusher3000"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
edition = "2018"
name = "shush"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
soloud = "1"
rand = "0.8.4"
rand_distr = "0.4.3"
include_dir = "0.7.2"
